# consize

./: Makefile  okteto.yml
api/: Dockerfile  pyproject.toml  requirements.txt
api/app/: __main__.py
chart/: values.yaml
chart/templates/: deployment.yaml  service.yaml
