[tool.poetry]
name = "consize-api"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
fastapi = "^0.66.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
